# opengl-stuffs

./: .clang-format  CMakeLists.txt  README.md
examples/: CMakeLists.txt  camera.cpp  camera_class.cpp  cube.cpp  glfw_controls.hpp  hierarchy.cpp  lighting.cpp  make_window.hpp  matrices.cpp  moving_polygon.cpp  nk_gl3_backend.hpp  nk_glfw.hpp  nuklear.cpp  nuklear_glfw.cpp  nuklear_glfw_gl3.h  rotation.cpp  textures.cpp  triangle.cpp  utils.cpp  utils.hpp
include/: buffers.hpp  c_str.hpp  c_str_wrapper.hpp  camera.hpp  common.hpp  control_scheme.hpp  fixed_size_element_buffer.hpp  glfw_context.hpp  glm_traits.hpp  input_timer.hpp  key_mapper.hpp  layout.hpp  load_shaders.hpp  matrix_stack.hpp  opengl.hpp  program.hpp  result.hpp  shaders.hpp  stb_image.h  stbi_wrapper.hpp  structured_buffers.hpp  texture.hpp  utility.hpp  vertex_array_renderer.hpp  window.hpp  with_window.hpp
include/KHR/: khrplatform.h
include/glad/: glad.h
include/input/: keys.hpp  mouse.hpp
include/meta/: composite.hpp  first_of.hpp  is_one_of.hpp  mixin.hpp
include/nuklear/: buffer.hpp  config.hpp  context.hpp  enums.hpp  font_atlas.hpp  interfaces.hpp  nuklear++.hpp  style.hpp  widgets.hpp
include/opengl/: glm.hpp
include/traversecpp/: composite.hpp  fold.hpp
include/window/: hints.hpp  mixins.hpp
shaders/: basic.fs  basic.vs  basic_lighting.fs  basic_projection.vs  lerp.fs  matrix_perspective.vs  ortho_with_offset.vs  positionable_triangle.vs  projected_with_colors.vs  projection_with_normal.vs  textured.fs  uniform.fs  yellow.fs
src/: glad.c  main.cpp
src/examples/: make_window.hpp  moving_polygon.cpp  moving_polygon.hpp  textures.cpp  textures.hpp  utils.cpp
